--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "meteor-node-stubs": "^0.4.1"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.2.0",
     "autoprefixer": "^9.6.1",
     "postcss": "^6.0.23",
     "postcss-import": "^12.0.1",
@@ -19,7 +20,13 @@
     "plugins": {
       "postcss-import": {},
       "tailwindcss": {},
-      "autoprefixer": {}
+      "autoprefixer": {},
+      "@fullhuman/postcss-purgecss":{
+        "content":[
+          "./client/index.html"
+        ]
+      }
     }
   }
+
 }
